--- a/templates/create_alumno.html
+++ b/templates/create_alumno.html
@@ -25,6 +25,7 @@
         <input type="number" class="form-control" id="semestre" name="semestre">
     </div>
     <button type="submit" class="btn btn-primary">Guardar</button>
+    <a href="{{ url_for('index') }}" class="btn btn-danger">Cancelar</a>
 </form>
 
 {% endblock %}
