--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
         <th>Apellido Paterno</th>
         <th>Apellido Materno</th>
         <th>Semestre</th>
+        <th>Acciones</th>
     </thead>
     <tbody>
         {% for alumno in alumnos %}
@@ -19,6 +20,8 @@
             <td>{{ alumno.ap_paterno }}</td>
             <td>{{ alumno.ap_materno }}</td>
             <td>{{ alumno.semestre }}</td>
+            <td><a href="{{ url_for('delete_alumno',no_control = alumno.no_control)}}" class="btn btn-danger">Eliminar Alumno</a>
+                <a href="{{ url_for('update_alumno',no_control = alumno.no_control)}}" class="btn btn-success">Actualizar Alumno</a></td>
         </tr>
         {% endfor %}
     </tbody>
