--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Gestión de alumnos</h1>
+        <h1 class="text-center">Gestión de alumnos - Cómputo en la Nube 1</h1>
         <hr>
         <div class="container">
             {% block content %}{% endblock %}
