--- a/templates/create_alumno.html
+++ b/templates/create_alumno.html
@@ -5,7 +5,7 @@
 <h3>Agregar alumno</h3>
 <form action="{{ url_for('create_alumno') }}" method="POST">
     <div class = "form-group mb-3">
-        <label for="no_control">No. Control</label>
+        <label for="no_control">Número Control</label>
         <input type="text" class="form-control" id="no_control" name="no_control">
     </div>
     <div class = "form-group mb-3">
